<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/_xxhdpi5dp"
    android:background="@color/colorWhite">

    <RelativeLayout
        android:id="@+id/reading_activity_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adview_reading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_reading_top_id">
        </com.google.android.gms.ads.AdView>

        <TextView
            android:id="@+id/readingCurrent"
            style="@style/TextNormalDivider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_xxhdpi5dp"
            android:layout_marginStart="@dimen/_xxhdpi5dp"
            android:layout_toLeftOf="@+id/adview_reading"
            android:text="@string/reading_current"
            android:textColor="@color/colorAccent" />
    </RelativeLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adview_reading_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_reading_bottom_id">

    </com.google.android.gms.ads.AdView>

    <android.support.v4.view.ViewPager
        android:id="@+id/readingViewPager"
        android:layout_above="@id/adview_reading_bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/reading_activity_header" />

</RelativeLayout>