<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:id="@+id/itemRecyclerMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_item_recycler_view">

        <RelativeLayout
            android:id="@+id/itemRecyclerHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/itemRecyclerIcon"
                android:layout_width="@dimen/_xxhdpi60dp"
                android:layout_height="@dimen/_xxhdpi60dp"
                android:layout_alignParentLeft="true"
                android:src="@mipmap/ic_launcher"
                app:civ_border_color="@color/colorAccent"
                app:civ_border_width="3dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/itemRecyclerIcon">

                <TextView
                    android:id="@+id/itemRecyclerName"
                    style="@style/TextHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/app_name"
                    android:layout_marginLeft="@dimen/_xxhdpi7dp"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/itemRecyclerCategory"
                    style="@style/TextNormalDivider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/itemRecyclerName"
                    android:layout_marginLeft="@dimen/_xxhdpi7dp"
                    android:text="@string/category_prefix"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/itemRecyclerStateLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/itemRecyclerCategory"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TextNormalDivider"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_xxhdpi7dp"
                        android:text="@string/state_read_prefix"
                        android:textColor="@android:color/black"
                        android:textStyle="italic" />

                    <TextView
                        android:id="@+id/itemRecyclerState"
                        style="@style/TextNormalDivider"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="7dp"
                        android:text="@string/state_unread"
                        android:textColor="@android:color/black"
                        android:textStyle="italic|bold" />
                </LinearLayout>
            </RelativeLayout>

        </RelativeLayout>

        <TextView
            android:id="@+id/itemRecyclerContent"
            style="@style/TextNormalContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemRecyclerHeader"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:lines="3"
            android:maxLines="3"
            android:ellipsize="end"
            android:layout_marginTop="5dp"
            android:text="@string/app_name" />
    </RelativeLayout>

</android.support.v7.widget.CardView>